// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A bulleted List 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin-bottom: 0.25rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin: 0rem;
  padding-left: 1rem;
}

.c0 {
  list-style-type: disc;
}

<ul
  className="c0 c1"
>
  <li
    className="c2"
  >
    🥑
  </li>
  <li
    className="c2"
  >
    🍕
  </li>
  <li
    className="c2"
  >
    🥨
  </li>
</ul>
`;

exports[`A default List, should be a ul 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin: 0rem;
  padding: 0rem;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin-bottom: 0.25rem;
}

.c0 {
  list-style-type: none;
}

<ul
  className="c0 c1"
>
  <li
    className="c2"
  >
    🥑
  </li>
  <li
    className="c2"
  >
    🍕
  </li>
  <li
    className="c2"
  >
    🥨
  </li>
</ul>
`;

exports[`A numerically ordered List 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin-bottom: 0.25rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin: 0rem;
  padding-left: 1rem;
}

.c0 {
  list-style-type: decimal;
}

<ol
  className="c0 c1"
>
  <li
    className="c2"
  >
    🥑
  </li>
  <li
    className="c2"
  >
    🍕
  </li>
  <li
    className="c2"
  >
    🥨
  </li>
</ol>
`;

exports[`A numerically ordered List marked as nomarker 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin-bottom: 0.25rem;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  margin: 0rem;
  padding-left: 0rem;
}

.c0 {
  list-style-type: none;
}

<ol
  className="c0 c1"
>
  <li
    className="c2"
  >
    🥑
  </li>
  <li
    className="c2"
  >
    🍕
  </li>
  <li
    className="c2"
  >
    🥨
  </li>
</ol>
`;
